--- a/paper/paper.Rmd
+++ b/paper/paper.Rmd
@@ -12,7 +12,7 @@ output:
     number_sections: false
     toc: false
   github_document:
-    html_preview: true
+    html_preview: false
 csl: mbio.csl
 fontsize: 12pt
 geometry: margin=1.0in
